// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/sidebar should match empty div snapshot when teamId is missing 1`] = `<div />`;

exports[`components/sidebar should match snapshot 1`] = `
<div
  className=""
  id="SidebarContainer"
>
  <SidebarHeader
    canCreateChannel={true}
    canJoinPublicChannel={true}
    handleOpenDirectMessagesModal={[Function]}
    invitePeopleModal={[Function]}
    showCreateCategoryModal={[Function]}
    showMoreChannelsModal={[Function]}
    showNewChannelModal={[Function]}
    unreadFilterEnabled={false}
  />
  <div
    aria-label="channel navigator region"
    className="a11y__region"
    data-a11y-sort-order="6"
    id="lhsNavigator"
    role="application"
  >
    <Connect(ChannelNavigator)
      canCreateChannel={true}
      canJoinPublicChannel={true}
      handleOpenDirectMessagesModal={[Function]}
      invitePeopleModal={[Function]}
      showCreateCategoryModal={[Function]}
      showMoreChannelsModal={[Function]}
      showNewChannelModal={[Function]}
      unreadFilterEnabled={false}
    />
  </div>
  <div
    className="sidebar--left__icons"
  >
    <Connect(Pluggable)
      pluggableName="LeftSidebarHeader"
    />
  </div>
  <Connect(SidebarChannelList)
    handleOpenMoreDirectChannelsModal={[Function]}
    onDragEnd={[Function]}
    onDragStart={[Function]}
  />
  <Connect(DataPrefetch) />
  <Connect(SidebarNextSteps) />
</div>
`;

exports[`components/sidebar should match snapshot when direct channels modal is open 1`] = `
<div
  className=""
  id="SidebarContainer"
>
  <SidebarHeader
    canCreateChannel={true}
    canJoinPublicChannel={true}
    handleOpenDirectMessagesModal={[Function]}
    invitePeopleModal={[Function]}
    showCreateCategoryModal={[Function]}
    showMoreChannelsModal={[Function]}
    showNewChannelModal={[Function]}
    unreadFilterEnabled={false}
  />
  <div
    aria-label="channel navigator region"
    className="a11y__region"
    data-a11y-sort-order="6"
    id="lhsNavigator"
    role="application"
  >
    <Connect(ChannelNavigator)
      canCreateChannel={true}
      canJoinPublicChannel={true}
      handleOpenDirectMessagesModal={[Function]}
      invitePeopleModal={[Function]}
      showCreateCategoryModal={[Function]}
      showMoreChannelsModal={[Function]}
      showNewChannelModal={[Function]}
      unreadFilterEnabled={false}
    />
  </div>
  <div
    className="sidebar--left__icons"
  >
    <Connect(Pluggable)
      pluggableName="LeftSidebarHeader"
    />
  </div>
  <Connect(SidebarChannelList)
    handleOpenMoreDirectChannelsModal={[Function]}
    onDragEnd={[Function]}
    onDragStart={[Function]}
  />
  <Connect(DataPrefetch) />
  <Connect(SidebarNextSteps) />
  <Connect(MoreDirectChannels)
    isExistingChannel={false}
    onModalDismissed={[Function]}
  />
</div>
`;

exports[`components/sidebar should match snapshot when more channels modal is open 1`] = `
<div
  className=""
  id="SidebarContainer"
>
  <SidebarHeader
    canCreateChannel={true}
    canJoinPublicChannel={true}
    handleOpenDirectMessagesModal={[Function]}
    invitePeopleModal={[Function]}
    showCreateCategoryModal={[Function]}
    showMoreChannelsModal={[Function]}
    showNewChannelModal={[Function]}
    unreadFilterEnabled={false}
  />
  <div
    aria-label="channel navigator region"
    className="a11y__region"
    data-a11y-sort-order="6"
    id="lhsNavigator"
    role="application"
  >
    <Connect(ChannelNavigator)
      canCreateChannel={true}
      canJoinPublicChannel={true}
      handleOpenDirectMessagesModal={[Function]}
      invitePeopleModal={[Function]}
      showCreateCategoryModal={[Function]}
      showMoreChannelsModal={[Function]}
      showNewChannelModal={[Function]}
      unreadFilterEnabled={false}
    />
  </div>
  <div
    className="sidebar--left__icons"
  >
    <Connect(Pluggable)
      pluggableName="LeftSidebarHeader"
    />
  </div>
  <Connect(SidebarChannelList)
    handleOpenMoreDirectChannelsModal={[Function]}
    onDragEnd={[Function]}
    onDragStart={[Function]}
  />
  <Connect(DataPrefetch) />
  <Connect(SidebarNextSteps) />
</div>
`;
